[gd_scene load_steps=5 format=3 uid="uid://d2uur1eafvbow"]

[ext_resource type="Script" path="res://scripts/death_screen.gd" id="1_m0r4n"]

[sub_resource type="LabelSettings" id="LabelSettings_etq0k"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_h3qj3"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_kljwm"]
font_size = 32

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m0r4n")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.41
anchor_right = 0.5
anchor_bottom = 0.41
offset_left = -979.0
offset_top = -461.8
offset_right = 978.0
offset_bottom = 663.2
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="DeathMsg" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.326
anchor_right = 0.5
anchor_bottom = 0.326
offset_left = -46.0
offset_top = -14.08
offset_right = 47.0
offset_bottom = 8.91998
grow_horizontal = 2
grow_vertical = 2
text = "u suck lmao"

[node name="Menu" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.633
anchor_right = 0.5
anchor_bottom = 0.633
offset_left = -86.0
offset_top = -15.64
offset_right = 92.0
offset_bottom = 15.36
text = "Return to Menu"

[node name="PlayAgain" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.586
anchor_right = 0.5
anchor_bottom = 0.586
offset_left = -94.0
offset_top = -15.88
offset_right = 95.0
offset_bottom = 15.12
grow_horizontal = 2
grow_vertical = 0
text = "Play Again"

[node name="TimerLayer" type="CanvasLayer" parent="."]

[node name="TimeLabel" type="Label" parent="TimerLayer"]
anchors_preset = -1
anchor_left = 0.471
anchor_top = 0.396
anchor_right = 0.471
anchor_bottom = 0.396
offset_left = -22.32
offset_top = -11.68
offset_right = 20.68
offset_bottom = 11.32
text = "Time:"
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="TimerLayer"]
anchors_preset = -1
anchor_left = 0.954
anchor_top = 0.043
anchor_right = 0.954
anchor_bottom = 0.043
offset_left = -950.68
offset_top = 394.56
offset_right = -787.68
offset_bottom = 446.56
metadata/_edit_use_anchors_ = true

[node name="Minutes" type="Label" parent="TimerLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.187
anchor_top = 0.51
anchor_right = 0.187
anchor_bottom = 0.51
offset_left = -22.481
offset_top = -22.52
offset_right = 0.518999
offset_bottom = 0.479998
text = "00:"
label_settings = SubResource("LabelSettings_etq0k")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Seconds" type="Label" parent="TimerLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.469
anchor_top = 0.51
anchor_right = 0.469
anchor_bottom = 0.51
offset_left = -22.447
offset_top = -22.52
offset_right = 22.553
offset_bottom = 22.48
text = "00."
label_settings = SubResource("LabelSettings_h3qj3")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Miliseconds" type="Label" parent="TimerLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.779
anchor_top = 0.51
anchor_right = 0.779
anchor_bottom = 0.51
offset_left = -26.977
offset_top = -22.52
offset_right = 27.023
offset_bottom = 22.48
text = "000"
label_settings = SubResource("LabelSettings_kljwm")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="PlayAgain" to="." method="_on_play_again_pressed"]
